[package]
name = "ear_api"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
bluer = { version = "0.17", features = ["full"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1.19"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"

[[bin]]
name = "earctl"
path = "src/main.rs"
